@@ -28,6 +28,7 @@ DFHack Future
         warn-starving:  check for starving, thirsty, or very drowsy units and pause with warning if any are found
         points:  set number of points available at embark screen
     New tweaks
+        embark-profile-name: Allows the use of lowercase letters when saving embark profiles
         kitchen-keys: Fixes DF kitchen meal keybindings
         kitchen-prefs-color: Changes color of enabled items to green in kitchen preferences
         kitchen-prefs-empty: Fixes a layout issue with empty kitchen tabs
